# sraft-rs

./: Cargo.toml  README.md  build.rs
proto/: raftservice.proto
src/: main.rs
src/raft/: application.rs  client.rs  clientman.rs  messages.rs  mod.rs  server.rs  service.rs  state.rs  transformers.rs
