[package]
name = "raft-rs"
version = "0.1.0"
authors = ["Isitha Subasinghe <isubasinghe@student.unimelb.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = {version = "1.0.119", features=["derive"] }
bytes = { version = "1.0.1", features = ["serde"] }
bincode = "1.3.1"
tokio = {version ="1.0.2", features=["full", "tracing"]}
tokio-stream = {version = "0.1.2", features=["time", "net", "io-util"]}
futures = { version = "0.3.12", features = ["thread-pool"]}
async-stream = "0.3.0"
tracing = "0.1.22"
tracing-subscriber = { version = "0.2.15", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }