[package]
name = "raft-rs"
version = "0.1.0"
authors = ["Isitha Subasinghe <isubasinghe@student.unimelb.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = {version = "1.0.119", features=["derive"] }
bytes = { version = "1.0.1", features = ["serde"] }
bincode = "1.3.1"
tokio = {version ="1.0.2", features=["full", "tracing"]}
tokio-stream = {version = "0.1.2", features=["time", "net", "io-util"]}
futures = { version = "0.3.12", features = ["thread-pool"]}
async-stream = "0.3.0"
tracing = "0.1.22"
tracing-subscriber = { version = "0.2.15", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
tokio-serde = {version = "0.8.0", features=["bincode", "json"]}
tokio-util = {version = "0.6.1", features=["full"]}
tonic = "0.4"
prost = "0.7"
crossbeam-channel = "0.5.0"
hashbrown = "0.9.1"

[build-dependencies]
tonic-build = "0.4"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

[profile.release]
lto = "fat"
codegen-units = 1