[package]
name = "raft-rs"
version = "0.1.0"
authors = ["Isitha Subasinghe <isubasinghe@student.unimelb.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
tokio = {version ="1.0.2", features=["full", "tracing"]}
futures = { version = "0.3.12", features = ["thread-pool"]}
tracing = "0.1.22"
tracing-subscriber = { version = "0.2.15", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
tonic = "0.4"
prost = "0.7"
hashbrown = "0.9.1"

[build-dependencies]
tonic-build = "0.4"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

[profile.release]
lto = "fat"
codegen-units = 1